# MyWebsite

./: .travis.yml  CMakeLists.txt  COPYING  Doxyfile.in  FindGit.cmake  FindLibSoup2.cmake  config.h.in  main.c  utils.c  utils.h  web-test.c  web.h  web_handler.h  web_module.h
modules/: CMakeLists.txt
modules/admin/: CMakeLists.txt  admin.c
modules/blank/: CMakeLists.txt  blank.c
modules/doesntexist/: CMakeLists.txt  doesntexist.c
modules/helloworld/: CMakeLists.txt  helloworld.c
services/: Configuration.h  README
web/: test.c
